# eduassist-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
.codex/agents/: docs-researcher.toml  security-reviewer.toml
.github/workflows/: ci.yml
apps/: README.md
apps/admin-web/: Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/ai-orchestrator/: Dockerfile  pyproject.toml
apps/ai-orchestrator-crewai/: Dockerfile  pyproject.toml
apps/ai-orchestrator-specialist/: Dockerfile  pyproject.toml
apps/ai-orchestrator-specialist/src/ai_orchestrator_specialist/: admin_status_answers.py  agent_builders.py  answer_payloads.py  evidence_kernel.py  execution_budget.py  extracted_module_contracts.py  fast_path_answer_contract.py  fast_path_answer_runtime.py  fast_path_answers.py  general_knowledge_runtime.py  grounding_answer_helpers.py  guardrail_runtime.py  intent_registry.json  intent_registry.py  intent_resolution.py  judge_repair_flow.py  llm_runtime.py  local_retrieval.py  local_retrieval_rerank_contract.py  local_retrieval_rerank_runtime.py  local_retrieval_search_contract.py  local_retrieval_search_runtime.py  main.py  manager_flow.py  models.py  operational_memory_answers.py  planner_policy.py  planner_support.py  protected_answer_helpers.py  public_bundle_fast_paths.py  public_doc_knowledge.py  public_known_unknowns.py  public_profile_answers.py  public_query_patterns.py  registry.py  resolved_intent_answers.py  restricted_doc_matching.py  restricted_doc_tool_first.py  runtime.py  runtime_dependency_builders.py  (+17 more)
apps/ai-orchestrator/src/ai_orchestrator/: __init__.py  agent_kernel.py  analysis_context_runtime.py  answer_verification_runtime.py  candidate_builder.py  candidate_chooser.py  channel_reply_formatting.py  conversation_answer_state.py  conversation_focus_runtime.py  crewai_trace.py  debug_trace_footer.py  dedicated_stack_app.py  engine_selector.py  engine_trace.py  entity_resolution.py  evidence_pack.py  final_polish_policy.py  graph.py  graph_classification_contract.py  graph_classification_runtime.py  graph_execution_contract.py  graph_execution_runtime.py  graph_rag_runtime.py  grounded_answer_experience.py  grounded_answer_pipeline_runtime.py  grounded_answer_support_contract.py  grounded_answer_support_runtime.py  intent_analysis_runtime.py  kernel_runtime.py  langgraph_dedicated_runtime.py  langgraph_local_llm.py  langgraph_message_workflow.py  langgraph_public_compound_runtime.py  langgraph_public_retrieval_runtime.py  langgraph_runtime.py  langgraph_trace.py  llamaindex_kernel.py  llamaindex_kernel_runtime.py  llamaindex_local_llm.py  llamaindex_native_plan_contract.py  (+99 more)
apps/ai-orchestrator/src/ai_orchestrator/crewai/: __init__.py  agents.py  flow.py  state.py  tasks.py
apps/ai-orchestrator/src/ai_orchestrator/engines/: __init__.py  base.py  crewai_engine.py  langgraph_engine.py  llamaindex_workflow_engine.py  python_functions_engine.py  specialist_supervisor_engine.py
apps/api-core/: Dockerfile  alembic.ini  pyproject.toml
apps/api-core/alembic/: env.py
apps/api-core/alembic/versions/: 434bee84d7d9_initial_schema_foundation.py  4e27f7963646_add_support_conversation_rls.py  7f1c3b0d5e9a_add_visit_booking_and_institutional_requ.py  9aa0e8004bc1_add_runtime_rls_policies.py  c18f1a8f0fd7_add_handoff_assignment_and_sla_fields.py  d2b1ef6c8a90_add_federated_identities_and_link_.py  e6d4c9a4b2f1_expand_runtime_rls_to_supporting_domain_tables.py  f4a8f3945d39_add_document_chunk_fts_index.py
apps/api-core/src/api_core/: __init__.py  config.py  contracts.py  main.py
apps/api-core/src/api_core/db/: base.py  session.py
apps/api-core/src/api_core/db/models/: __init__.py  academic.py  audit.py  calendar.py  conversation.py  documents.py  finance.py  identity.py  school.py
apps/api-core/src/api_core/services/: __init__.py  audit.py  auth.py  conversation_memory.py  domain.py  identity.py  institutional_workflows.py  policy.py  public_profile_seed.py  support.py  telegram_link.py
apps/telegram-gateway/: Dockerfile  pyproject.toml
apps/telegram-gateway/src/telegram_gateway/: __init__.py  main.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/worker_app/: __init__.py  config.py  llamaindex_pipeline.py  main.py  pipeline.py
artifacts/: two_stack_random_strict_llm_live_20260327_v1_dataset.json
docs/: README.md
docs/adr/: 0001-greenfield-rebuild.md  0002-retrieval-and-agent-runtime.md
docs/architecture/: agentic-dual-track-plan.md  agentic-framework-comparison.md  crewai-best-practices-audit.md  crewai-runtime-visual-guide.md  dedicated-first-reference-state.md  dual-stack-crewai-visual-flow.md  dual-stack-data-retrieval-visual-flow.md  dual-stack-langgraph-visual-flow.md  dual-stack-runtime-visual-guide.md  dual-stack-runtime-visual-overview.md  final-polish-normal-vs-llm-forced-assessment-20260403.md  five-path-chatbot-comparison-extensive-report.json  five-path-chatbot-comparison-extensive-report.md  five-path-chatbot-comparison-report.json  five-path-chatbot-comparison-report.md  five-path-chatbot-smoke-report.json  five-path-chatbot-smoke-report.md  five-path-comparative-improvement-roadmap.md  five-path-system-question-bank-strict-report.json  five-path-system-question-bank-strict-report.md  five-path-system-question-bank-v10-scorecard.json  five-path-system-question-bank-v10-scorecard.md  five-path-system-question-bank-v4-scorecard.json  (+643 more)
infra/: README.md
tests/: README.md
tools/: README.md
tools/article-export/: README.md  pyproject.toml
tools/article-export/src/article_export/: __init__.py  export_docx.py
tools/graphrag-benchmark/: README.md  pyproject.toml  start_local_llamacpp_stack.sh  stop_local_llamacpp_stack.sh
tools/graphrag-benchmark/datasets/: public_corpus_extended_queries.json  public_corpus_queries.json  public_corpus_smoke.json
tools/graphrag-benchmark/src/graphrag_benchmark/: __init__.py  bootstrap_workspace.py  dry_run_index.py  local_check.py  preflight.py  run_benchmark.py
(+296 files in other folders)
