[project]
name = "eduassist-platform"
version = "0.1.0"
description = "Bootstrap tooling and repository configuration for EduAssist Platform."
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
  "apps/api-core/src",
  "apps/ai-orchestrator/src",
  "apps/telegram-gateway/src",
  "apps/worker/src",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

