[project]
name = "eduassist-platform"
version = "0.1.0"
description = "Bootstrap tooling and repository configuration for EduAssist Platform."
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
  "apps/api-core/src",
  "apps/ai-orchestrator/src",
  "apps/ai-orchestrator-specialist/src",
  "apps/telegram-gateway/src",
  "apps/worker/src",
  "packages/semantic-ingress/python/src",
  "packages/observability/python/src",
  "tests",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
]
