[project]
name = "ai-orchestrator-specialist"
version = "0.1.0"
description = "Quality-first specialist supervisor service for EduAssist comparison runs."
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai-agents[sqlalchemy,litellm]>=0.13.2,<0.14.0",
  "pydantic-settings>=2.8.0",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_orchestrator_specialist"]
