[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "AI orchestration service for EduAssist Platform."
requires-python = ">=3.12"
dependencies = [
  "eduassist-observability",
  "fastapi>=0.115.0",
  "graphrag==3.0.6",
  "httpx>=0.28.0",
  "langgraph>=1.1.0,<2.0.0",
  "langgraph-checkpoint-postgres>=3.0.5",
  "openai>=1.109.1",
  "pillow>=11.3.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.8.0",
  "qdrant-client[fastembed]>=1.14.2",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
eduassist-observability = { path = "../../packages/observability/python" }

[tool.hatch.build.targets.wheel]
packages = ["src/ai_orchestrator"]
