[project]
name = "api-core"
version = "0.1.0"
description = "Core domain API for EduAssist Platform."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "eduassist-observability",
  "faker>=37.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "PyJWT[crypto]>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.8.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
eduassist-observability = { path = "../../packages/observability/python" }

[tool.hatch.build.targets.wheel]
packages = ["src/api_core"]
