[project]
name = "worker-app"
version = "0.1.0"
description = "Background worker for EduAssist Platform."
requires-python = ">=3.12"
dependencies = [
  "pydantic-settings>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_app"]

