[project]
name = "worker-app"
version = "0.1.0"
description = "Background worker for EduAssist Platform."
requires-python = ">=3.12"
dependencies = [
  "minio>=7.2.8",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.8.0",
  "PyYAML>=6.0.2",
  "qdrant-client[fastembed]>=1.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_app"]
